--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,8 @@ dependencies {
     compile files ('libs/RyoramaModloader.jar')
 }
 
-ext {
-    MANIFEST = manifest {
-        attributes('Main-Class': 'com.ryorama.testmod.ContentMod')
-    }
-}
-
 jar {
-    manifest.from(MANIFEST)
+    manifest {
+        attributes('Main-Class': 'com.ryorama.examplemod.ExampleMod')
+    }
 }
